# expansion-analysis-assignment

./: README.md  fitting_a_line.ipynb  pyproject.toml
expansion_fitter/: fitters.py  friedmann_integrators.py
expansion_fitter/tests/: test_fitters.py  test_friedmann_integrators.py
