[tool.poetry]
name = "expansion-fitter"
version = "0.1"
description = "Expansion history data analysis assignment"
authors = ["Kiyoshi Masui <kmasui@mit.edu>"]
packages = [
    {include = "expansion_fitter"}
    ]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^3.0"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.1.1"
